<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:useDefaultMargins="true"
        app:columnCount="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id_contacto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputText_height"
            android:inputType="number"
            android:maxLines="1"
            android:drawableStart="@drawable/hastag"
            android:background="@drawable/edit_style"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/id"
            android:alpha="0.6"
            app:layout_columnSpan="1"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nombre_contacto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputText_height"
            android:inputType="text"
            android:maxLines="1"
            android:drawableStart="@drawable/man_user"
            android:drawablePadding="@dimen/drawable_padding"
            android:background="@drawable/edit_style"
            android:hint="@string/nombre"
            android:alpha="0.6"
            app:layout_columnSpan="1"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/telefono_contacto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputText_height"
            android:background="@drawable/edit_style"
            android:drawableStart="@drawable/old_typical_phone"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="10"
            android:alpha="0.6"
            app:layout_columnSpan="1"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cumpleanos_contacto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputText_height"
            android:background="@drawable/edit_style"
            android:drawableStart="@drawable/cake"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/birthday"
            android:inputType="date"
            android:maxLines="1"
            android:alpha="0.6"
            app:layout_columnSpan="1"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nota_contacto"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/edit_style"
            android:drawableStart="@drawable/clipboard_with_pencil_"
            android:drawablePadding="@dimen/drawable_padding"
            android:inputType="textMultiLine"
            android:ems="10"
            android:maxLines="10"
            android:hint="@string/note"
            android:alpha="0.6"
            app:layout_columnSpan="1"/>

    </android.support.v7.widget.GridLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_addContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:elevation="12dp"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/checked_symbol"/>

</FrameLayout>